@@ -238,8 +238,12 @@ data tree :
    6 rue George Sand
    31120 ROQUETTES - France
 
-and since years 2000
+since years 2000
 
  Bernard Pidoux
  f6bvp@free.fr
 
+since 2020
+
+ Dave van der Locht
+ dave.is@home.nl
